--- a/web/login.html
+++ b/web/login.html
@@ -21,7 +21,7 @@
 
 <body class="bg-dark">
  <div class="header">
-   <h1>어플 이름</h1>
+   <h1>Moonjaeeunhaeng App</h1>
  </div>
   <div class="container">
     <div class="card card-login mx-auto mt-5">
@@ -52,7 +52,7 @@
         </form>
         <div class="text-center">
           <a class="d-block small mt-3" href="register.html">회원가입</a>
-          <a class="d-block small" href="forgot-password.html">비밀번호 찾기</a>
+          <a class="d-block small" href="forgot-password.html">아이디/비밀번호 찾기</a>
         </div>
       </div>
     </div>
