--- a/web/forgot-password.html
+++ b/web/forgot-password.html
@@ -23,7 +23,7 @@
 
   <div class="container">
     <div class="card card-login mx-auto mt-5">
-      <div class="card-header">아이디 찾기</div>
+      <div class="card-header">아이디/비밀번호 찾기</div>
       <div class="card-body">
         <div class="text-center mb-4">
           <h4>아이디를 잊어버리셨나요?</h4>
@@ -38,22 +38,14 @@
           </div>
           <a class="btn btn-primary btn-block" href="login.html">아이디 찾기</a>
         </form>
-        <div class="text-center">
-          <a class="d-block small mt-3" href="register.html">회원가입</a>
-          <a class="d-block small" href="login.html">로그인</a>
-        </div>
-      </div>
-    </div>
-  </div>
+        <br>
+        <hr>
 
-  <div class="container">
-    <div class="card card-login mx-auto mt-5">
-      <div class="card-header">비밀번호 찾기</div>
-      <div class="card-body">
         <div class="text-center mb-4">
           <h4>비밀번호를 잊어버리셨나요?</h4>
           <p>이메일 주소를 입력하면 암호를 재설정하는 방법에 대해 안내해드리겠습니다.</p>
         </div>
+
         <form>
           <div class="form-group">
             <div class="form-label-group">
@@ -63,6 +55,7 @@
           </div>
           <a class="btn btn-primary btn-block" href="login.html">비밀번호 찾기</a>
         </form>
+
         <div class="text-center">
           <a class="d-block small mt-3" href="register.html">회원가입</a>
           <a class="d-block small" href="login.html">로그인</a>
