--- a/web/register.html
+++ b/web/register.html
@@ -21,65 +21,67 @@
 
 <body class="bg-dark">
 
-  <div class="container">
-    <div class="card card-register mx-auto mt-5">
-      <div class="card-header">회원가입</div>
-      <div class="card-body">
-        <form>
-          <div class="form-group">
-            <div class="form-row">
-              <div class="col-md-6">
-                <div class="form-label-group">
-                  <input type="text" id="firstName" class="form-control" placeholder="이름" required="required" autofocus="autofocus">
-                  <label for="firstName">이름</label>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-label-group">
-                  <input type="text" id="lastName" class="form-control" placeholder="성" required="required">
-                  <label for="lastName">성</label>
-                </div>
-              </div>
-            </div>
+<div class="container">
+  <div class="card card-register mx-auto mt-5">
+    <div class="card-header">회원가입</div>
+    <div class="card-body">
+      <form>
+        <div class="form-group">
+          <div class="form-label-group">
+            <input type="text" id="firstName" class="form-control" placeholder="이름" required="required" autofocus="autofocus">
+            <label for="firstName">이름</label>
           </div>
-          <div class="form-group">
-            <div class="form-label-group">
-              <input type="email" id="inputEmail" class="form-control" placeholder="이메일" required="required">
-              <label for="inputEmail">이메일</label>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="form-row">
-              <div class="col-md-6">
-                <div class="form-label-group">
-                  <input type="password" id="inputPassword" class="form-control" placeholder="비밀번호" required="required">
-                  <label for="inputPassword">비밀번호</label>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-label-group">
-                  <input type="password" id="confirmPassword" class="form-control" placeholder="비밀번호 확인" required="required">
-                  <label for="confirmPassword">비밀번호 확인</label>
-                </div>
-              </div>
-            </div>
-          </div>
-          <a class="btn btn-primary btn-block" href="login.html">가입</a>
-        </form>
-        <div class="text-center">
-          <a class="d-block small mt-3" href="login.html">로그인</a>
-          <a class="d-block small" href="forgot-password.html">비밀번호 찾기</a>
         </div>
+        <div class="form-group">
+          <div class="form-label-group">
+            <input type="text" id="lastName" class="form-control" placeholder="성" required="required">
+            <label for="lastName">성</label>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="form-label-group">
+            <input type="text" id="Id" class="form-control col-8" placeholder="아이디" required="required">
+            <label for="Id">아이디
+              <button class="confirmId btn btn-primary">
+                아이디 중복 확인
+              </button></label>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="form-label-group">
+            <input type="password" id="inputPassword" class="form-control" placeholder="비밀번호" required="required">
+            <label for="inputPassword">비밀번호</label>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="form-label-group">
+            <input type="password" id="confirmPassword" class="form-control" placeholder="비밀번호 확인" required="required">
+            <label for="confirmPassword">비밀번호 확인</label>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="form-label-group">
+            <input type="email" id="inputEmail" class="form-control" placeholder="이메일" required="required">
+            <label for="inputEmail">이메일</label>
+          </div>
+        </div>
+        <a class="btn btn-primary btn-block" href="login.html">가입</a>
+      </form>
+      <div class="text-center">
+        <a class="d-block small mt-3" href="login.html">로그인</a>
+        <a class="d-block small" href="forgot-password.html">비밀번호 찾기</a>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- Bootstrap core JavaScript-->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap core JavaScript-->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Core plugin JavaScript-->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+<!-- Core plugin JavaScript-->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
 </body>
 
