--- a/web/index.html
+++ b/web/index.html
@@ -61,7 +61,6 @@
         </div>
       </li>
     </ul>
-
   </nav>
 
   <div id="wrapper">
@@ -69,77 +68,144 @@
     <div id="content-wrapper">
       <!-- Page Content -->
       <div class="container">
-
         <!-- Page Heading -->
-        <h1 class="my-4">1시
-          <small>순위를 3등이나 5등까지만이라도</small>
-        </h1>
+        <!-- Jumbotron Header -->
+        <header class="jumbotron my-4">
+          <h3 class="display-4">헤더 만들었쓔~!</h3>
+          <p class="lead">앱에 대한 설명쓰면 괜찮을 둡..</p>
+          <a href="login.html" class="btn btn-primary btn-lg">더보기</a>
+        </header>
 
-        <!-- Project One -->
-        <div class="row">
-          <div class="col-md-7">
-            <a href="#">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-            </a>
+        <div class="col-lg-9 mx-auto mt-5">
+        <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+            </div>
           </div>
-          <div class="col-md-5">
-            <h3>그룹명 아이디를 받으면 되나</h3>
-            <p>그룹소개 아이디를 받으면 되나</p>
-            <a class="btn btn-primary" href="#">그룹 열기</a>
-          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Two -->
-        <div class="row">
-          <div class="col-md-7">
-            <a href="#">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-            </a>
-          </div>
-          <div class="col-md-5">
-            <h3>Project Two</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-            <a class="btn btn-primary" href="#">View Project</a>
-          </div>
         </div>
-        <!-- /.row -->
 
-        <hr>
 
-        <!-- Project Three -->
-        <div class="row">
-          <div class="col-md-7">
-            <a href="#">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-            </a>
+
+        <!-- table-responsive -->
+        <div class="col-lg-6 mx-auto mt-5">
+          <div class="panel panel-default">
+            <div class="panel-heading ">
+              <h5>새로운 그룹</h5>
+            </div>
+            <!-- /.panel-heading -->
+            <div class="panel-body">
+              <div class="table-responsive">
+                <table class="table">
+                  <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>그룹 이름</th>
+                    <th>그룹장</th>
+                    <th>대표 태그</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr>
+                    <td>1</td>
+                    <td>안녕</td>
+                    <td>하세요</td>
+                    <td>저는</td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>스물세살</td>
+                    <td>이소현</td>
+                    <td>입니다</td>
+                  </tr>
+                  <tr>
+                    <td>3</td>
+                    <td>저는</td>
+                    <td>아직</td>
+                    <td>철이</td>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!-- /.table-responsive -->
+            </div>
+            <!-- /.panel-body -->
           </div>
-          <div class="col-md-5">
-            <h3>Project Three</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-            <a class="btn btn-primary" href="#">View Project</a>
-          </div>
+          <!-- /.panel -->
         </div>
-        <!-- /.row -->
+        <!-- /.col-lg-6 -->
 
-        <hr>
 
-        <!-- Project Four -->
-        <div class="row">
 
-          <div class="col-md-7">
-            <a href="#">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-            </a>
+        <div class="col-lg-6 mx-auto mt-5">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h5>진행중인 퀴즈 그룹</h5>
+            </div>
+            <!-- /.panel-heading -->
+            <div class="panel-body">
+              <div class="table-responsive">
+                <table class="table">
+                  <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>그룹 이름</th>
+                    <th>그룹장</th>
+                    <th>대표 태그</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr>
+                    <td>1</td>
+                    <td>들지</td>
+                    <td>않았습니다</td>
+                    <td>왜냐하면</td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>철은</td>
+                    <td>너무</td>
+                    <td>무겁기</td>
+                  </tr>
+                  <tr>
+                    <td>3</td>
+                    <td>때문입니다</td>
+                    <td>감사</td>
+                    <td>합니다</td>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!-- /.table-responsive -->
+              <a class="btn btn-primary btn-block color-palette" href="index.html">더보기</a>
+            </div>
+            <!-- /.panel-body -->
           </div>
-          <div class="col-md-5">
-            <h3>Project Four</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-            <a class="btn btn-primary" href="#">View Project</a>
-          </div>
+          <!-- /.panel -->
         </div>
+        <!-- /.col-lg-6 -->
+
+
         <!-- /.row -->
 
         <hr>
